[iOS] Do not scroll to top when in fullscreen

This CL disable the "scroll to top" action when tapping the status bar
when fullscreen is enabled.

Bug: 876716
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: If2a199be39da0de596e8d945e9fc4c42c65ad009
Reviewed-on: https://chromium-review.googlesource.com/1185098
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585766}
Former-commit-id: 46d832ccbcd08a729286f6f95986eb044fcb358f