ios/chrome/browser/ui/fullscreen/fullscreen_web_view_proxy_observer.mm
@@ -57,10 +57,14 @@
 
 - (BOOL)webViewScrollViewShouldScrollToTop:
     (CRWWebViewScrollViewProxy*)webViewScrollViewProxy {
-  // Inform FullscreenUIElements that the content is going to be scrolled to the
-  // top.
-  self.mediator->ScrollToTop();
-  return YES;
+  if (self.model->progress() > 0.05) {
+    // Inform FullscreenUIElements that the content is going to be scrolled to
+    // the top.
+    self.mediator->ScrollToTop();
+    return YES;
+  } else {
+    return NO;
+  }
 }
 
 @end
